--- a/src/main/webapp/assets/CSS/styles.css
+++ b/src/main/webapp/assets/CSS/styles.css
@@ -17,15 +17,7 @@ body {
     line-height: 1;
     font-family: "Trebuchet MS", sans-serif;
     font-size: 14px;
-}
-
-a {
-    color: #FFC373;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #A65F00;
+    background-color: #F5DEB3;
 }
 
 h1 {
@@ -33,18 +25,17 @@ h1 {
     text-align: center;
     font-size: 24px;
     font-weight: 700;
-    color: #FF9200;
     margin: 30px 0 60px 0;
 }
 
 h1:after {
     content: '';
     position: absolute;
-    left: 35%;
+    left: 32.5%;
     bottom: 0;
-    width: 30%;
+    width: 35%;
     height: 3px;
-    background-color: #530FAD;
+    background-color: black;
     margin-bottom: -30px;
 }
 
@@ -65,17 +56,18 @@ h1:after {
 header {
     font-family: monospace;
     padding: 10px 20px;
-    color: #67E300;
-    background-color: #8243D6;
-    font-size: 18px;
+    color: black;
+    background-color: #D2B48C;
+    font-size: 20px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 1100px;
+    text-align: center
 }
 
-header .column {
+  header .column {
     width: 33.333%;
     max-width: 700px;
     flex-shrink: 0;
@@ -133,13 +125,16 @@ header .made_by {
     max-width: 1500px;
 }
 
+.column{
+  border-radius: 10px;
+}
+
 .main_content .column {
     max-width: 800px;
     min-width: 400px;
-    background-color: #A9F16D;
+    background-color: #FFDEAD;
     margin: 1%;
-    border: #439400 5px solid;
-    border-radius: 10%;
+    border: black 3px solid;
 }
 
 #areas {
@@ -148,31 +143,52 @@ header .made_by {
 
 .empty{
     background-image: url("../images/empty.png");
+    background-repeat: no-repeat;
+    margin: 2px;
+    margin-bottom: -4px;
 }
 .radius1{
     background-image: url("../images/radius1.png");
+    background-repeat: no-repeat;
+    margin: 2px;
+    margin-bottom: -4px;
 }
 .radius15{
     background-image: url("../images/radius1,5.png");
+    background-repeat: no-repeat;
+    margin: 2px;
+    margin-bottom: -4px;
 }
 .radius2{
     background-image: url("../images/radius2.png");
+    background-repeat: no-repeat;
+    margin: 2px;
+    margin-bottom: -4px;
 }
 .radius25{
     background-image: url("../images/radius2,5.png");
+    background-repeat: no-repeat;
+    margin: 2px;
+    margin-bottom: -4px;
 }
 .radius3{
     background-image: url("../images/radius3.png");
+    background-repeat: no-repeat;
+    margin: 2px;
+    margin-bottom: -4px;
 }
 
 #visualization_container {
     transition-duration: 1000ms;
+    max-width: 1000000px;
+    min-width: 0;
 }
 
 #visualization_container.input_err {
     border-color: #94002D;
     box-shadow: 4px 4px 4px #E40045, -4px -4px 4px #E40045, 4px -4px 4px #E40045, -4px 4px 4px #E40045;
 }
+
 
 .send_form {
     padding: 50px 0;
@@ -186,36 +202,31 @@ header .made_by {
 
 .send_form input, .send_form select option, .send_form select {
     font-family: "Trebuchet MS", sans-serif;
-    padding: 2%;
-    background-color: #996AD6;
-    color: #330570;
-    border-color: #4F2982;
-    box-shadow: 2px 2px #330570;
-    font-size: 16px;
+    padding: 7px;
+    font-size: 12px;
     outline: none;
     transition-duration: 500ms;
+    width: 30%;
 }
 
 .send_form label {
-    color: #FF9200;
+
     font-weight: 700;
-    font-size: 24px;
-    margin: 0 10px 0 0;
+    font-size: 20px;
+    margin: 0 20px 0 0;
+}
+
+.input-coordinate{
+  margin-bottom: 12px;
 }
 
 .send_form input::placeholder {
-    color: #330570;
     font-family: "Trebuchet MS", sans-serif;
 }
 
 .send_form select option:disabled {
     background-color: #330570;
     color: #996AD6;
-}
-
-.send_form select:focus, .send_form input:focus, .send_form .r_button:focus {
-    border-color: #A65F00;
-    box-shadow: 0 2px 2px #FF9200;
 }
 
 .send_form #y_select, .send_form #x_select {
@@ -231,27 +242,23 @@ header .made_by {
 
 .send_form .r_button, .send_button {
     padding: 10px 15px;
-    background-color: #996AD6;
-    color: #330570;
+    background-color: #DEB887;
     border-color: #4F2982;
-    box-shadow: 2px 2px #330570;
     font-weight: 700;
     border-radius: 10px;
     outline: none;
-    transition-duration: 500ms;
+    transition-duration: 200ms;
 }
 
 .send_form .r_button:hover, .send_button:hover {
-    background-color: #330570;
+    background-color: #8B4513;
     color: white;
     border-color: #A65F00;
-    box-shadow: 0 4px 4px #FF9200;
 }
 
 .send_form .input_err {
     background-color: #E40045;
     border-color: #94002D;
-    box-shadow: 0 4px 4px #94002D;
 }
 
 .sel {
@@ -262,14 +269,6 @@ header .made_by {
 
 .send_button_block {
     text-align: center;
-}
-
-.send_button {
-    box-shadow: -2px -2px 3px #FF9200, 2px 2px 3px #FF9200, -2px 2px 3px #FF9200, 2px -2px 3px #FF9200;
-}
-
-.send_button:hover {
-    box-shadow: 0 4px 4px #67E300;
 }
 
 .main_content .result_table {
@@ -283,20 +282,18 @@ table {
 }
 
 th, td {
-    border: 3px solid #996AD6;
+    border: 3px solid black;
     padding: 10px 15px;
 }
 
 th {
-    background-color: #330570;
-    color: #FFC373;
+    background-color: #CD853F;
+    color: black;
 }
 
 td {
-    color: #330570;
     word-break: break-all;
 }
-
 
 footer {
     padding: 5px;
